# Guessing-Game

./: .gitignore  README.md
Budgie/GuessingGame/: input.b  main.b
C#/GuessingGame/: .gitignore  GuessingGame.sln  IO.cs  LinqExtensions.cs  Maybe.cs  Program.cs
C++/GuessingGame/: CMakeLists.txt  cctype_wrappers.hpp  input.hpp  main.cpp
D/GuessingGame/: .gitignore  dub.json  dub.selections.json
D/GuessingGame/source/: app  app.d  input.d
D/guessing_game/: .gitignore  dub.json
D/guessing_game/source/: app.d
Deno/GuessingGame/: .gitignore  import_map.json  run.json
Deno/GuessingGame/app/: main.ts
Deno/GuessingGame/src/: lib.ts
Elixir/guessing_game/lib/: guessing_game.ex
F#/GuessingGame/: GuessingGame.sln  Program.fs
Haskell/GuessingGame/: ChangeLog.md  GuessingGame.cabal  package.yaml  test.hi  test.hs
Haskell/GuessingGame/app/: Main.hs
Haskell/GuessingGame/src/: Lib.hs
OCaml/GuessingGame/: GuessingGame.opam  Makefile  dune-project
OCaml/GuessingGame/lib/: Lib.ml  dune
OCaml/GuessingGame/lib/control/: Applicative.ml  Combinators.ml  Functor.ml  Monad.ml  Monoid.ml
OCaml/GuessingGame/lib/text/: Input.ml  Read.ml
OCaml/GuessingGame/test/: dune
Python/guessing_game/: .gitignore  main.py  pyproject.toml
Python/guessing_game/guessing_game/: __init__.py
Python/guessing_game/guessing_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Rust/guessing_game/: Cargo.toml
Rust/guessing_game/src/: main.rs
Rust/guessing_game_two/: Cargo.toml
Rust/guessing_game_two/src/: main.rs
Scala/guessing-game-cats/: project.scala
Swift/GuessingGame/: Package.swift  README.md
TypeScript/GuessingGame/: .eslintrc  .gitignore  nodemon.json  package.json  tsconfig.json
(+15 files in other folders)
