[tool.poetry]
name = "guessing_game"
version = "0.1.0"
description = ""
authors = ["William Howell <wlm.howell@gmail.com>"]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
