[package]
name = "guessing_game_two"
version = "0.1.0"
authors = ["William Howell <wlm.howell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.5"
rand = "0.4"
typename = "0.1.1"